Fixed a bug where the date-picker would break to multiple lines on mobile devices

--- a/app/styles/_date-picker.scss
+++ b/app/styles/_date-picker.scss
@@ -18,6 +18,7 @@
     width: 100%;
     display: block;
     z-index: 2;
+    letter-spacing: -.32em;
 
     background-image: url(../images/tweed.png);
     border-bottom: 1px solid #4c5969;
